added sortfile class

--- a/mspr_maven/staff.html
+++ b/mspr_maven/staff.html
@@ -2,10 +2,30 @@
 <head>
 </head>
 <body>
+acortes
+<br>
+afoley
+<br>
+cberthier
+<br>
+jmacclane
+<br>
+jrouletabille
+<br>
+jwest
+<br>
 lescartin
 <br>
-tthieuleux
+mriggs
+<br>
+mroussat
 <br>
 rdiolot
+<br>
+sconnor
+<br>
+sholmes
+<br>
+tthieuleux
 </body>
 </html>
