added hashmapgenerator and equipement list

--- a/mspr_maven/src/main/resources/agents_html_file/acortes.html
+++ b/mspr_maven/src/main/resources/agents_html_file/acortes.html
@@ -2,9 +2,19 @@
 <head>
 </head>
 <body>
-<ul>
 <p>acortes</p>
 <img src='../../../../../ID/acortes.png' alt='Image of acortes'>
+<ul>
+<input type="checkbox" checked>
+<label>Talkies walkies</label><br>
+<input type="checkbox" checked>
+<label>Brassard de sécurité</label><br>
+<input type="checkbox" checked>
+<label>Lampe Torche</label><br>
+<input type="checkbox" checked>
+<label>Bombes lacrymogènes</label><br>
+<input type="checkbox" checked>
+<label>Mousqueton</label><br>
 </ul>
 </body>
 </html>
