--- a/mspr_maven/src/main/resources/agents_html_file/cberthier.html
+++ b/mspr_maven/src/main/resources/agents_html_file/cberthier.html
@@ -2,9 +2,15 @@
 <head>
 </head>
 <body>
-<ul>
 <p>cberthier</p>
 <img src='../../../../../ID/cberthier.png' alt='Image of cberthier'>
+<ul>
+<input type="checkbox" checked>
+<label>Kit oreillette</label><br>
+<input type="checkbox" checked>
+<label>Lampe Torche</label><br>
+<input type="checkbox" checked>
+<label>Bombes lacrymogènes</label><br>
 </ul>
 </body>
 </html>
