--- a/mspr_maven/src/main/resources/agents_html_file/jwest.html
+++ b/mspr_maven/src/main/resources/agents_html_file/jwest.html
@@ -2,9 +2,17 @@
 <head>
 </head>
 <body>
-<ul>
 <p>jwest</p>
 <img src='../../../../../ID/jwest.png' alt='Image of jwest'>
+<ul>
+<input type="checkbox" checked>
+<label>Talkies walkies</label><br>
+<input type="checkbox" checked>
+<label>Mousqueton</label><br>
+<input type="checkbox" checked>
+<label>Bandeau agent cynophile</label><br>
+<input type="checkbox" checked>
+<label>Brassard de sécurité</label><br>
 </ul>
 </body>
 </html>
