--- a/mspr_maven/src/main/resources/agents_html_file/lescartin.html
+++ b/mspr_maven/src/main/resources/agents_html_file/lescartin.html
@@ -2,9 +2,19 @@
 <head>
 </head>
 <body>
-<ul>
 <p>lescartin</p>
 <img src='../../../../../ID/lescartin.png' alt='Image of lescartin'>
+<ul>
+<input type="checkbox" checked>
+<label>Porte menottes</label><br>
+<input type="checkbox" checked>
+<label>Bandeau agent cynophile</label><br>
+<input type="checkbox" checked>
+<label>Kit oreillette</label><br>
+<input type="checkbox" checked>
+<label>Tasers</label><br>
+<input type="checkbox" checked>
+<label>Gants d’intervention</label><br>
 </ul>
 </body>
 </html>
