--- a/mspr_maven/src/main/resources/agents_html_file/mriggs.html
+++ b/mspr_maven/src/main/resources/agents_html_file/mriggs.html
@@ -2,9 +2,19 @@
 <head>
 </head>
 <body>
-<ul>
 <p>mriggs</p>
 <img src='../../../../../ID/mriggs.png' alt='Image of mriggs'>
+<ul>
+<input type="checkbox" checked>
+<label>Kit oreillette</label><br>
+<input type="checkbox" checked>
+<label>Brassard de sécurité</label><br>
+<input type="checkbox" checked>
+<label>Porte menottes</label><br>
+<input type="checkbox" checked>
+<label>Tasers</label><br>
+<input type="checkbox" checked>
+<label>Gants d’intervention</label><br>
 </ul>
 </body>
 </html>
