--- a/mspr_maven/src/main/resources/agents_html_file/mroussat.html
+++ b/mspr_maven/src/main/resources/agents_html_file/mroussat.html
@@ -2,9 +2,19 @@
 <head>
 </head>
 <body>
-<ul>
 <p>mroussat</p>
 <img src='../../../../../ID/mroussat.png' alt='Image of mroussat'>
+<ul>
+<input type="checkbox" checked>
+<label>Talkies walkies</label><br>
+<input type="checkbox" checked>
+<label>Brassard de sécurité</label><br>
+<input type="checkbox" checked>
+<label>Lampe Torche</label><br>
+<input type="checkbox" checked>
+<label>Bombes lacrymogènes</label><br>
+<input type="checkbox" checked>
+<label>Porte menottes</label><br>
 </ul>
 </body>
 </html>
