--- a/mspr_maven/src/main/resources/agents_html_file/rdiolot.html
+++ b/mspr_maven/src/main/resources/agents_html_file/rdiolot.html
@@ -2,9 +2,17 @@
 <head>
 </head>
 <body>
-<ul>
 <p>rdiolot</p>
 <img src='../../../../../ID/rdiolot.png' alt='Image of rdiolot'>
+<ul>
+<input type="checkbox" checked>
+<label>Kit oreillette</label><br>
+<input type="checkbox" checked>
+<label>Porte menottes</label><br>
+<input type="checkbox" checked>
+<label>Gants d’intervention</label><br>
+<input type="checkbox" checked>
+<label>Lampe Torche</label><br>
 </ul>
 </body>
 </html>
