--- a/mspr_maven/src/main/resources/agents_html_file/sconnor.html
+++ b/mspr_maven/src/main/resources/agents_html_file/sconnor.html
@@ -2,9 +2,15 @@
 <head>
 </head>
 <body>
-<ul>
 <p>sconnor</p>
 <img src='../../../../../ID/sconnor.png' alt='Image of sconnor'>
+<ul>
+<input type="checkbox" checked>
+<label>Lampe Torche</label><br>
+<input type="checkbox" checked>
+<label>Brassard de sécurité</label><br>
+<input type="checkbox" checked>
+<label>Talkies walkies</label><br>
 </ul>
 </body>
 </html>
