--- a/mspr_maven/src/main/resources/agents_html_file/sholmes.html
+++ b/mspr_maven/src/main/resources/agents_html_file/sholmes.html
@@ -2,9 +2,17 @@
 <head>
 </head>
 <body>
-<ul>
 <p>sholmes</p>
 <img src='../../../../../ID/sholmes.png' alt='Image of sholmes'>
+<ul>
+<input type="checkbox" checked>
+<label>Gants d’intervention</label><br>
+<input type="checkbox" checked>
+<label>Kit oreillette</label><br>
+<input type="checkbox" checked>
+<label>Lampe Torche</label><br>
+<input type="checkbox" checked>
+<label>Bombes lacrymogènes</label><br>
 </ul>
 </body>
 </html>
