--- a/mspr_maven/src/main/resources/agents_html_file/tthieuleux.html
+++ b/mspr_maven/src/main/resources/agents_html_file/tthieuleux.html
@@ -2,9 +2,23 @@
 <head>
 </head>
 <body>
-<ul>
 <p>tthieuleux</p>
 <img src='../../../../../ID/tthieuleux.png' alt='Image of tthieuleux'>
+<ul>
+<input type="checkbox" checked>
+<label>Kit oreillette</label><br>
+<input type="checkbox" checked>
+<label>Porte menottes</label><br>
+<input type="checkbox" checked>
+<label>Mousqueton</label><br>
+<input type="checkbox" checked>
+<label>Tasers</label><br>
+<input type="checkbox" checked>
+<label>Bombes lacrymogènes</label><br>
+<input type="checkbox" checked>
+<label>Gants d’intervention</label><br>
+<input type="checkbox" checked>
+<label>Brassard de sécurité</label><br>
 </ul>
 </body>
 </html>
