modified images type

--- a/mspr_maven/src/main/resources/agents_html_file/acortes.html
+++ b/mspr_maven/src/main/resources/agents_html_file/acortes.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>Andrea Cortes</p>
-<img src='../../../../../ID/acortes.png' alt='Image of acortes'>
+<img src='../../../../../ID/acortes.jpg' alt='Image of acortes'>
 <ul>
 <input type="checkbox" checked>
 <label>Talkies walkies</label><br>
