--- a/mspr_maven/src/main/resources/agents_html_file/afoley.html
+++ b/mspr_maven/src/main/resources/agents_html_file/afoley.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>Axel Foley</p>
-<img src='../../../../../ID/afoley.png' alt='Image of afoley'>
+<img src='../../../../../ID/afoley.jpg' alt='Image of afoley'>
 <ul>
 <input type="checkbox" checked>
 <label>Kit oreillette</label><br>
