--- a/mspr_maven/src/main/resources/agents_html_file/cberthier.html
+++ b/mspr_maven/src/main/resources/agents_html_file/cberthier.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>Corinne Berthier</p>
-<img src='../../../../../ID/cberthier.png' alt='Image of cberthier'>
+<img src='../../../../../ID/cberthier.jpg' alt='Image of cberthier'>
 <ul>
 <input type="checkbox" checked>
 <label>Kit oreillette</label><br>
