--- a/mspr_maven/src/main/resources/agents_html_file/jmacclane.html
+++ b/mspr_maven/src/main/resources/agents_html_file/jmacclane.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>John Macclane</p>
-<img src='../../../../../ID/jmacclane.png' alt='Image of jmacclane'>
+<img src='../../../../../ID/jmacclane.jpg' alt='Image of jmacclane'>
 <ul>
 <input type="checkbox" checked>
 <label>Gants d’intervention</label><br>
