--- a/mspr_maven/src/main/resources/agents_html_file/jrouletabille.html
+++ b/mspr_maven/src/main/resources/agents_html_file/jrouletabille.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>Jean Rouletabille</p>
-<img src='../../../../../ID/jrouletabille.png' alt='Image of jrouletabille'>
+<img src='../../../../../ID/jrouletabille.jpg' alt='Image of jrouletabille'>
 <ul>
 <input type="checkbox" checked>
 <label>Kit oreillette</label><br>
