--- a/mspr_maven/src/main/resources/agents_html_file/jwest.html
+++ b/mspr_maven/src/main/resources/agents_html_file/jwest.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>John West</p>
-<img src='../../../../../ID/jwest.png' alt='Image of jwest'>
+<img src='../../../../../ID/jwest.jpg' alt='Image of jwest'>
 <ul>
 <input type="checkbox" checked>
 <label>Talkies walkies</label><br>
