--- a/mspr_maven/src/main/resources/agents_html_file/lescartin.html
+++ b/mspr_maven/src/main/resources/agents_html_file/lescartin.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>Louis Escartin</p>
-<img src='../../../../../ID/lescartin.png' alt='Image of lescartin'>
+<img src='../../../../../ID/lescartin.jpg' alt='Image of lescartin'>
 <ul>
 <input type="checkbox" checked>
 <label>Porte menottes</label><br>
