--- a/mspr_maven/src/main/resources/agents_html_file/mriggs.html
+++ b/mspr_maven/src/main/resources/agents_html_file/mriggs.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>Mike Riggs</p>
-<img src='../../../../../ID/mriggs.png' alt='Image of mriggs'>
+<img src='../../../../../ID/mriggs.jpg' alt='Image of mriggs'>
 <ul>
 <input type="checkbox" checked>
 <label>Kit oreillette</label><br>
