--- a/mspr_maven/src/main/resources/agents_html_file/mroussat.html
+++ b/mspr_maven/src/main/resources/agents_html_file/mroussat.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>Mathis Roussat</p>
-<img src='../../../../../ID/mroussat.png' alt='Image of mroussat'>
+<img src='../../../../../ID/mroussat.jpg' alt='Image of mroussat'>
 <ul>
 <input type="checkbox" checked>
 <label>Talkies walkies</label><br>
