--- a/mspr_maven/src/main/resources/agents_html_file/rdiolot.html
+++ b/mspr_maven/src/main/resources/agents_html_file/rdiolot.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>Romain Diolot</p>
-<img src='../../../../../ID/rdiolot.png' alt='Image of rdiolot'>
+<img src='../../../../../ID/rdiolot.jpg' alt='Image of rdiolot'>
 <ul>
 <input type="checkbox" checked>
 <label>Kit oreillette</label><br>
