--- a/mspr_maven/src/main/resources/agents_html_file/sconnor.html
+++ b/mspr_maven/src/main/resources/agents_html_file/sconnor.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>Sarah Connor</p>
-<img src='../../../../../ID/sconnor.png' alt='Image of sconnor'>
+<img src='../../../../../ID/sconnor.jpg' alt='Image of sconnor'>
 <ul>
 <input type="checkbox" checked>
 <label>Lampe Torche</label><br>
