--- a/mspr_maven/src/main/resources/agents_html_file/sholmes.html
+++ b/mspr_maven/src/main/resources/agents_html_file/sholmes.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>Sherlock Holmes</p>
-<img src='../../../../../ID/sholmes.png' alt='Image of sholmes'>
+<img src='../../../../../ID/sholmes.jpg' alt='Image of sholmes'>
 <ul>
 <input type="checkbox" checked>
 <label>Gants d’intervention</label><br>
