--- a/mspr_maven/src/main/resources/agents_html_file/tthieuleux.html
+++ b/mspr_maven/src/main/resources/agents_html_file/tthieuleux.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <p>Thibault Thieuleux</p>
-<img src='../../../../../ID/tthieuleux.png' alt='Image of tthieuleux'>
+<img src='../../../../../ID/tthieuleux.jpg' alt='Image of tthieuleux'>
 <ul>
 <input type="checkbox" checked>
 <label>Kit oreillette</label><br>
