--- a/mspr_maven/index.html
+++ b/mspr_maven/index.html
@@ -1,34 +1,71 @@
 <html>
 <head>
+<meta charset='utf-8'>
+<title>Go Securi</title>
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+<link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 </head>
 <body>
-<ul>
-<li><a href="./src/main/resources/agents_html_file/acortes.html">acortes</a></li>
-<br>
-<li><a href="./src/main/resources/agents_html_file/afoley.html">afoley</a></li>
-<br>
-<li><a href="./src/main/resources/agents_html_file/cberthier.html">cberthier</a></li>
-<br>
-<li><a href="./src/main/resources/agents_html_file/jmacclane.html">jmacclane</a></li>
-<br>
-<li><a href="./src/main/resources/agents_html_file/jrouletabille.html">jrouletabille</a></li>
-<br>
-<li><a href="./src/main/resources/agents_html_file/jwest.html">jwest</a></li>
-<br>
-<li><a href="./src/main/resources/agents_html_file/lescartin.html">lescartin</a></li>
-<br>
-<li><a href="./src/main/resources/agents_html_file/mriggs.html">mriggs</a></li>
-<br>
-<li><a href="./src/main/resources/agents_html_file/mroussat.html">mroussat</a></li>
-<br>
-<li><a href="./src/main/resources/agents_html_file/rdiolot.html">rdiolot</a></li>
-<br>
-<li><a href="./src/main/resources/agents_html_file/sconnor.html">sconnor</a></li>
-<br>
-<li><a href="./src/main/resources/agents_html_file/sholmes.html">sholmes</a></li>
-<br>
-<li><a href="./src/main/resources/agents_html_file/tthieuleux.html">tthieuleux</a></li>
-<br>
-</ul>
+<article class="leaderboard">
+<header>
+<img src="https://cdn.discordapp.com/attachments/904830454757220392/957002650237415534/Screenshot_1.png" alt="Go Securi Logo">
+<h1 class="leaderboard__title"><span class="leaderboard__title--top">Liste d'agents</span></h1>
+</header>
+<main class="leaderboard__profiles">
+<article class="leaderboard__profile">
+<img src="https://cdn.discordapp.com/attachments/917814349450584095/957321750700519454/photo-avatar-profil.png" alt="acortes" class="leaderboard__picture">
+<a class="leaderboard__name" href="./src/main/resources/agents_html_file/acortes.html">Andrea Cortes</a>
+</article>
+<article class="leaderboard__profile">
+<img src="https://cdn.discordapp.com/attachments/917814349450584095/957321750700519454/photo-avatar-profil.png" alt="afoley" class="leaderboard__picture">
+<a class="leaderboard__name" href="./src/main/resources/agents_html_file/afoley.html">Axel Foley</a>
+</article>
+<article class="leaderboard__profile">
+<img src="https://cdn.discordapp.com/attachments/917814349450584095/957321750700519454/photo-avatar-profil.png" alt="cberthier" class="leaderboard__picture">
+<a class="leaderboard__name" href="./src/main/resources/agents_html_file/cberthier.html">Corinne Berthier</a>
+</article>
+<article class="leaderboard__profile">
+<img src="https://cdn.discordapp.com/attachments/917814349450584095/957321750700519454/photo-avatar-profil.png" alt="jmacclane" class="leaderboard__picture">
+<a class="leaderboard__name" href="./src/main/resources/agents_html_file/jmacclane.html">John Macclane</a>
+</article>
+<article class="leaderboard__profile">
+<img src="https://cdn.discordapp.com/attachments/917814349450584095/957321750700519454/photo-avatar-profil.png" alt="jrouletabille" class="leaderboard__picture">
+<a class="leaderboard__name" href="./src/main/resources/agents_html_file/jrouletabille.html">Jean Rouletabille</a>
+</article>
+<article class="leaderboard__profile">
+<img src="https://cdn.discordapp.com/attachments/917814349450584095/957321750700519454/photo-avatar-profil.png" alt="jwest" class="leaderboard__picture">
+<a class="leaderboard__name" href="./src/main/resources/agents_html_file/jwest.html">John West</a>
+</article>
+<article class="leaderboard__profile">
+<img src="https://cdn.discordapp.com/attachments/917814349450584095/957321750700519454/photo-avatar-profil.png" alt="lescartin" class="leaderboard__picture">
+<a class="leaderboard__name" href="./src/main/resources/agents_html_file/lescartin.html">Louis Escartin</a>
+</article>
+<article class="leaderboard__profile">
+<img src="https://cdn.discordapp.com/attachments/917814349450584095/957321750700519454/photo-avatar-profil.png" alt="mriggs" class="leaderboard__picture">
+<a class="leaderboard__name" href="./src/main/resources/agents_html_file/mriggs.html">Mike Riggs</a>
+</article>
+<article class="leaderboard__profile">
+<img src="https://cdn.discordapp.com/attachments/917814349450584095/957321750700519454/photo-avatar-profil.png" alt="mroussat" class="leaderboard__picture">
+<a class="leaderboard__name" href="./src/main/resources/agents_html_file/mroussat.html">Mathis Roussat</a>
+</article>
+<article class="leaderboard__profile">
+<img src="https://cdn.discordapp.com/attachments/917814349450584095/957321750700519454/photo-avatar-profil.png" alt="rdiolot" class="leaderboard__picture">
+<a class="leaderboard__name" href="./src/main/resources/agents_html_file/rdiolot.html">Romain Diolot</a>
+</article>
+<article class="leaderboard__profile">
+<img src="https://cdn.discordapp.com/attachments/917814349450584095/957321750700519454/photo-avatar-profil.png" alt="sconnor" class="leaderboard__picture">
+<a class="leaderboard__name" href="./src/main/resources/agents_html_file/sconnor.html">Sarah Connor</a>
+</article>
+<article class="leaderboard__profile">
+<img src="https://cdn.discordapp.com/attachments/917814349450584095/957321750700519454/photo-avatar-profil.png" alt="sholmes" class="leaderboard__picture">
+<a class="leaderboard__name" href="./src/main/resources/agents_html_file/sholmes.html">Sherlock Holmes</a>
+</article>
+<article class="leaderboard__profile">
+<img src="https://cdn.discordapp.com/attachments/917814349450584095/957321750700519454/photo-avatar-profil.png" alt="tthieuleux" class="leaderboard__picture">
+<a class="leaderboard__name" href="./src/main/resources/agents_html_file/tthieuleux.html">Thibault Thieuleux</a>
+</article>
+</main
+</article
 </body>
 </html>
