--- a/mspr_maven/src/main/resources/agents_html_file/sconnor.html
+++ b/mspr_maven/src/main/resources/agents_html_file/sconnor.html
@@ -1,9 +1,19 @@
 <html>
 <head>
+<meta charset='utf-8'>
+<title>Go Securi</title>
+<meta name='viewport' content='width=device-width, initial-scale=1'>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+<link rel='stylesheet' type='text/css' media='screen' href='../../../../style.css'>
 </head>
 <body>
-<p>Sarah Connor</p>
-<img src='../../../../../ID/sconnor.jpg' alt='Image of sconnor'>
+<article class="leaderboard">
+<header>
+<img src="https://cdn.discordapp.com/attachments/904830454757220392/957002650237415534/Screenshot_1.png" alt="Go Securi Logo">
+<h1 class="leaderboard__title"><span class="leaderboard__title--top">Fiche Agent</span></h1>
+</header>
+<p class="leaderboard__title">Sarah Connor</p>
+<img id="identite" src='../../../../../ID/sconnor.jpg' alt='Image of acortes'>
 <ul>
 <input type="checkbox" checked>
 <label>Lampe Torche</label><br>
